--- a/CleanCodeArchitectureDemo.Application/CleanCodeArchitectureDemo.Application.csproj
+++ b/CleanCodeArchitectureDemo.Application/CleanCodeArchitectureDemo.Application.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CleanCodeArchitectureDemo.Domain\CleanCodeArchitectureDemo.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.8" />
+  </ItemGroup>
+
 </Project>
