--- a/CleanCodeArchitectureDemo.Db.EFCore/CleanCodeArchitectureDemo.Db.EFCore.csproj
+++ b/CleanCodeArchitectureDemo.Db.EFCore/CleanCodeArchitectureDemo.Db.EFCore.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CleanCodeArchitectureDemo.Application\CleanCodeArchitectureDemo.Application.csproj" />
+    <ProjectReference Include="..\CleanCodeArchitectureDemo.Domain\CleanCodeArchitectureDemo.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
